[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/NESCyrillic.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://sounds/drumbeat.wav" type="AudioStream" id=3]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="InputSound" type="AudioStreamPlayer" parent="."]

[node name="Beat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.215686, 0.247059, 0.317647, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 24.0
margin_top = 29.0
margin_right = 1000.0
margin_bottom = 570.0
custom_constants/separation = 200

[node name="Up" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 976.0
margin_bottom = 47.0
rect_min_size = Vector2( 976, 47 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Up"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 247.0
margin_right = 976.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 47 )
custom_constants/separation = 700

[node name="Left" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 124.0
margin_bottom = 47.0
rect_min_size = Vector2( 124, 47 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Left"
valign = 1

[node name="Right" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 824.0
margin_right = 976.0
margin_bottom = 47.0
rect_min_size = Vector2( 152, 47 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Right"
align = 2
valign = 1

[node name="Down" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 494.0
margin_right = 976.0
margin_bottom = 541.0
rect_min_size = Vector2( 976, 47 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Down"
align = 1
valign = 1

[connection signal="timeout" from="BeatTimer" to="." method="_on_BeatTimer_timeout"]
